tests/paczka1/fuzzy1/30169510.err
Error in line 2: UVUd A803 79,6
Error in line 16: idsCd86gi A703 87,3
Error in line 31: A703 A213 222,8
